k8s/monitoring/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/part-of: demo-platform
    gateway-access: "true"
    # node-exporter использует hostNetwork/hostPath
    pod-security.kubernetes.io/enforce: privileged
